--- a/main/src/main/AndroidManifest.xml
+++ b/main/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
          this app needs the list the app in the allow/deny apps over the VPN -->
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
             tools:ignore="QueryAllPackagesPermission" />
+    
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS"
+        android:protectionLevel="signature"
+        tools:ignore="ProtectedPermissions" />
 
 
 <!--    <queries>-->
